# SeatWise

./: .gitignore  AI_Exam_Seat_Allocation.ipynb  agents.py  app.py  main.py  models.py  optimizer.py  pyproject.toml  requirements.txt
api/: index.py
data/: sample_halls.json  sample_students.csv
templates/: base.html  dashboard.html  new_allocation.html  seat_map.html
