[project]
name = "exam-seat-allocation"
version = "0.1.0"
description = "AI-Based Exam Hall Seat Allocation using Search Optimization & Google Antigravity SDK"
requires-python = ">=3.11"
dependencies = [
    "google-antigravity",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "flask>=3.0",
]

[project.scripts]
exam-alloc = "main:cli"
